layer.conf: scarthgap -> styhead

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -16,7 +16,7 @@ LAYERDEPENDS_meta-aws += "multimedia-layer"
 LAYERDEPENDS_meta-aws += "networking-layer"
 LAYERDEPENDS_meta-aws += "meta-python"
 
-LAYERSERIES_COMPAT_meta-aws = "scarthgap"
+LAYERSERIES_COMPAT_meta-aws = "styhead"
 
 # The dynamic-layers directory hosts the extensions and layer specific
 # modifications.
