--- a/.github/workflows/backport-based-on-label.yml
+++ b/.github/workflows/backport-based-on-label.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Create backport pull requests
         uses: korthout/backport-action@v1.3.1
         with:
-          target_branches: kirkstone-next scarthgap-next
+          target_branches: kirkstone-next scarthgap-next styhead-next
           # copy all labels (backport labels are automatically skipped)
           copy_labels_pattern: .+
           github_token: ${{ secrets.BOT_CREDENTIAL }}
