auto-approve-and-enable-auto-merge.yml: add label version-upgrade

--- a/.github/workflows/auto-approve-and-enable-auto-merge.yml
+++ b/.github/workflows/auto-approve-and-enable-auto-merge.yml
@@ -5,22 +5,22 @@ on:
     types: [review_requested]
     branches:
       - '*-next'
-
-jobs:
+      
+jobs:  
   auto-approve-and-merge:
     runs-on: ubuntu-latest
-    name: auto approve and enable auto-merge
+    name: auto approve and enable auto-merge     
     steps:
       - name: Sleep for 5 min (give PR time to create labels)
         run: sleep 5m
         shell: bash
-
+        
       - name: check label after delay
         uses: docker://agilepathway/pull-request-label-checker:latest
         with:
-          any_of: auto-backport
+          any_of: auto-integrate,version-upgrade
           repo_token: ${{ secrets.BOT2_CREDENTIAL }}
-
+          
       - name: Auto approve
         uses: juliangruber/approve-pull-request-action@v2.0.1
         with:
