--- a/.github/workflows/auto-approve-and-enable-auto-merge.yml
+++ b/.github/workflows/auto-approve-and-enable-auto-merge.yml
@@ -28,6 +28,6 @@ jobs:
           number: ${{ github.event.pull_request.number }}
 
       - name: Enable Pull Request Automerge
-        run: gh pr merge --rebase --auto "1"
+        run: gh pr merge --rebase --auto ${{ github.event.pull_request.number }}
         env:
           GH_TOKEN: ${{ secrets.BOT2_CREDENTIAL }}
