backport github workflows
(cherry picked from commit 4977e14caf2eeecb942e58b6ac086606a84c1097)

--- a/.github/workflows/auto-backport.yml
+++ b/.github/workflows/auto-backport.yml
@@ -1,33 +1,28 @@
 name: auto-backport
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - master-next
     types: ["closed"]
-
-jobs:  
-  cherry_pick:
-    strategy:
-      matrix:
-        branch: [kirkstone, dunfell, mickledore]
+permissions:
+  contents: write
+  pull-requests: write
+jobs:
+  backport:
+    name: Backport pull request
     runs-on: ubuntu-22.04
-    name: Cherry pick into release branches
-    if: |
-      (github.event.pull_request.merged == true ) &&
-      (contains(github.event.pull_request.labels.*.name, 'version-upgrade') || contains(github.event.pull_request.labels.*.name, 'auto-backport'))
+    # Only run when pull request is merged and labeled 'backport'
+    if: (github.event.pull_request.merged == true ) &&
+        (contains(github.event.pull_request.labels.*.name, 'version-upgrade') || contains(github.event.pull_request.labels.*.name, 'auto-backport'))
     steps:
-      - name: checkout current
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Cherry pick into ${{ matrix.branch }}-next
-        uses: carloscastrojumo/github-cherry-pick-action@v1.0.3
+      - name: Create backport pull requests
+        uses: korthout/backport-action@v3.1.0
         with:
-          branch: ${{ matrix.branch }}-next
-          labels: |
-            auto-created
-            backport
-            ${{ matrix.branch }}
-            auto-integrate
-          token: ${{ secrets.BOT_CREDENTIAL }}
+          target_branches: kirkstone-next scarthgap-next styhead-next
+          # copy all labels (backport labels are automatically skipped)
+          copy_labels_pattern: .+
+          github_token: ${{ secrets.BOT_CREDENTIAL }}
