--- a/.github/workflows/build-test-recipe.yml
+++ b/.github/workflows/build-test-recipe.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   update:
     name: build
-    runs-on: codebuild-${{ vars.CODEBUILD_RUNNER_NAME }}-${{ github.run_id }}-${{ github.run_attempt }}
+    runs-on: vars.RUNNER_NAME
     steps:
       - name: Checkout meta-aws
         uses: actions/checkout@v4
