--- a/.github/workflows/build-test-recipe.yml
+++ b/.github/workflows/build-test-recipe.yml
@@ -1,6 +1,8 @@
 name: build-test-recipe
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
   pull_request:
 jobs:
   changed:
@@ -118,8 +120,8 @@ jobs:
              bitbake $RECIPES -f -k | tee -a $MACHINE-build.log'
             set -e
             echo RECIPES to build: $RECIPES
-            test -e ${{ matrix.machine }}-build.log && ! grep -A3 " failed"  ${{ matrix.machine }}-build.log
-            test -e ${{ matrix.machine }}-build.log && ! grep -A3 " ERROR:"  ${{ matrix.machine }}-build.log
+            test -e build/${{ matrix.machine }}-build.log && ! grep -A3 " failed"  build/${{ matrix.machine }}-build.log
+            test -e build/${{ matrix.machine }}-build.log && ! grep -A3 " ERROR:"  build/${{ matrix.machine }}-build.log
       - name: Save ${{ matrix.machine }}-build.log
         if: '!cancelled()'
         uses: actions/upload-artifact@v4
@@ -141,11 +143,11 @@ jobs:
              export MACHINE=${{ matrix.machine }}
              export BB_ENV_PASSTHROUGH_ADDITIONS="$BB_ENV_PASSTHROUGH_ADDITIONS SSTATE_DIR DL_DIR" 
              bitbake core-image-minimal
-             bitbake core-image-minimal -c testimage'
-            resulttool report tmp/log/oeqa/testresults.json | tee -a ${{ matrix.machine }}-resulttool_report.txt
+             bitbake core-image-minimal -c testimage
+             resulttool report tmp/log/oeqa/testresults.json | tee -a ${{ matrix.machine }}-resulttool_report.txt'            
             set -e
             echo RECIPES to test: $RECIPES
-            test -e tmp/log/oeqa/testresults.json && ! grep -B3 "\"FAILED\""  tmp/log/oeqa/testresults.json
+            test -e build/tmp/log/oeqa/testresults.json && ! grep -B3 "\"FAILED\""  build/tmp/log/oeqa/testresults.json
             
       - name: Save resulttool_report.txt
         if: '!cancelled()'
