build-test-recipe.yml: change pull_request_target to pull_request

--- a/.github/workflows/build-test-recipe.yml
+++ b/.github/workflows/build-test-recipe.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
-  pull_request_target:
+  pull_request:
 jobs:
   changed:
     name: Get changed recipes
